--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="preconnect" href="https://d1di2lzuh97fh2.cloudfront.net" crossorigin>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta charset="utf-8">
-    <link rel="icon" href="XY.jpeg" type="image/png">
+    <link rel="icon" href="XY.jpeg" type="logo">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Xyrus</title>
+    <title>XYrus</title>
     <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
     <meta name="msapplication-tap-highlight" content="no">
     
