--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://d1di2lzuh97fh2.cloudfront.net" crossorigin>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta charset="utf-8">
-    <link rel="icon" href="XY.jpeg" type="logo">
+    <link rel="icon" href="XY.png" type="logo">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>XYrus</title>
     <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
@@ -55,7 +55,8 @@
         </div>
         <header class="l-h cf">
             <div class="sw cf">
-	<div class="sw-c cf"><section class="s s-hn s-hn-default wnd-mt-classic wnd-na-c logo-classic sc-none   wnd-w-wide wnd-nh-l hn-no-bg sc-m hm-editzone menu-default-underline-grow">
+	<div class="sw-c cf">
+		<section class="s s-hn s-hn-default wnd-mt-classic wnd-na-c logo-classic sc-none   wnd-w-wide wnd-nh-l hn-no-bg sc-m hm-editzone menu-default-underline-grow">
 	<div class="s-w">
 		<div class="s-o">
 
@@ -77,7 +78,10 @@
 
 			<div class="b-l-image logo-image">
 				<div class="b-l-image-w logo-image-cell">
-                    <picture><source type="image/webp" srcset="https://bba60a8d7a.cbaul-cdnwnd.com/de22ba9560116d90c96bf0143af09c0f/200000003-2e1472e14b/450/neon-light-alphabet-x-png.webp?ph=bba60a8d7a 200w, https://bba60a8d7a.cbaul-cdnwnd.com/de22ba9560116d90c96bf0143af09c0f/200000003-2e1472e14b/700/neon-light-alphabet-x-png.webp?ph=bba60a8d7a 200w, https://bba60a8d7a.cbaul-cdnwnd.com/de22ba9560116d90c96bf0143af09c0f/200000003-2e1472e14b/neon-light-alphabet-x-png.webp?ph=bba60a8d7a 200w" sizes="(min-width: 600px) 450px, (min-width: 360px) calc(100vw * 0.8), 100vw" ><img src="https://bba60a8d7a.cbaul-cdnwnd.com/de22ba9560116d90c96bf0143af09c0f/200000002-1e3671e36a/neon-light-alphabet-x-png.png?ph=bba60a8d7a" alt="" width="200" height="200" class="wnd-logo-img" ></picture>
+                    <picture>
+						<source type="image/webp" srcset="https://bba60a8d7a.cbaul-cdnwnd.com/de22ba9560116d90c96bf0143af09c0f/200000003-2e1472e14b/450/neon-light-alphabet-x-png.webp?ph=bba60a8d7a 200w, https://bba60a8d7a.cbaul-cdnwnd.com/de22ba9560116d90c96bf0143af09c0f/200000003-2e1472e14b/700/neon-light-alphabet-x-png.webp?ph=bba60a8d7a 200w, https://bba60a8d7a.cbaul-cdnwnd.com/de22ba9560116d90c96bf0143af09c0f/200000003-2e1472e14b/neon-light-alphabet-x-png.webp?ph=bba60a8d7a 200w" sizes="(min-width: 600px) 450px, (min-width: 360px) calc(100vw * 0.8), 100vw" >
+						<img src="XY.png" alt="" width="200" height="200" class="wnd-logo-img" >
+					</picture>
 				</div>
 			</div>
 
