--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://d1di2lzuh97fh2.cloudfront.net" crossorigin>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta charset="utf-8">
-    <link rel="icon" href="XY.png" type="logo">
+    <link rel="icon" href="XYZ.png" type="logo">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>XYrus</title>
     <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
@@ -79,19 +79,15 @@
 			<div class="b-l-image logo-image">
 				<div class="b-l-image-w logo-image-cell">
                     <picture>
-						<source type="image/webp" srcset="https://bba60a8d7a.cbaul-cdnwnd.com/de22ba9560116d90c96bf0143af09c0f/200000003-2e1472e14b/450/neon-light-alphabet-x-png.webp?ph=bba60a8d7a 200w, https://bba60a8d7a.cbaul-cdnwnd.com/de22ba9560116d90c96bf0143af09c0f/200000003-2e1472e14b/700/neon-light-alphabet-x-png.webp?ph=bba60a8d7a 200w, https://bba60a8d7a.cbaul-cdnwnd.com/de22ba9560116d90c96bf0143af09c0f/200000003-2e1472e14b/neon-light-alphabet-x-png.webp?ph=bba60a8d7a 200w" sizes="(min-width: 600px) 450px, (min-width: 360px) calc(100vw * 0.8), 100vw" >
-						<img src="XY.png" alt="" width="200" height="200" class="wnd-logo-img" >
+						<img src="XYZ.png" alt="" width="200" height="200" class="wnd-logo-img" >
 					</picture>
 				</div>
 			</div>
-
-			
-
 			<div class="b-l-br logo-br"></div>
 
 			<div class="b-l-text logo-text-wrapper">
 				<div class="b-l-text-w logo-text">
-					<span class="b-l-text-c logo-text-cell"><strong>YRUS</strong></span>
+					<span class="b-l-text-c logo-text-cell"><strong>XYRUS</strong></span>
 				</div>
 			</div>
 
