--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
 	<a href="#" class="menu-close" rel="nofollow" title="Close Menu"></a>
 	<ul class="level-1">
 		<li class="wnd-active   wnd-homepage">
-			<a class="menu-item" href="/home/"><span class="menu-item-text">Início</span></a>
+			<a class="menu-item" href="index.html"><span class="menu-item-text">Início</span></a>
 			
 		</li><li>
-			<a class="menu-item" href="/servicos/"><span class="menu-item-text">Membros</span></a>
+			<a class="menu-item" href="xyrus-membros.netlify.app"><span class="menu-item-text">Membros</span></a>
 			
 		</li><li>
 			<a class="menu-item" href="/sobre-mim/"><span class="menu-item-text">Sobre Xyrus</span></a>
